Telephony device re-design (dirty code)